--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,11 +12,20 @@
     <a class="navbar-brand" href="<%= root_path %>">Coder Ticket</a>
     <ul class="nav navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="#">Log In</a>
+        <a class="nav-link" href="<%=  sessions_new_path  %>">Log In</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Sign Up</a>
+        <a class="nav-link" href="<%= new_user_path %>">Sign Up</a>
       </li>
+      <% if logged_in? %>
+        <li class="nav-item">
+        <a class="nav-link" href="#">Hi <%= @current_user.name.upcase %></a>
+      </li>
+      <li class="nav-item">
+        
+        <%= link_to "Log out", logout_path, method: 'delete', class: "nav-link" %>
+      </li>
+      <% end %>
     </ul>
   </nav>  
 
