--- a/app/views/tickets/new.html.erb
+++ b/app/views/tickets/new.html.erb
@@ -1,47 +1,22 @@
-<div class="container-fluid tickets-buy">
-  <div class="row tickets-header">
-    <div class="col-xs-12 col-md-11 col-md-offset-1">
-      <h3> <%= @event.name %> </h3>
-      <div class="pull-left">
-        <%= fa_icon 'map-marker' %>
-      </div>
-      <div class="venue-details">
-       <%= @event.venue.name %>
-       <br/>
-       <%= @event.venue.full_address %>
-      </div>
-
-      <div class="pull-left">
-        <%= fa_icon 'clock-o' %>
-      </div>
-      <div class="time-details"> 
-        <%= @event.starts_at.strftime('%A, %d %b %Y %l:%M %p') %> 
-      </div>
-
-
+<div class="row p1">
+  <div class="col-lg-6">
+    <%= form_for (@ticket), url: event_tickets_path do |f| %>
+    <div class="form-group">
+      <%= f.label :ticket_types %>
+      <%= f.text_field :name, class:"form-control" %>
     </div>
-  </div>
-  <div class="row">
-    <div class="col-md-11 col-md-offset-1">  
-      <table class="table">
-        <th> Ticket Type </th>
-        <th> Unit Price </th>
-        <th> Quantity </th>
-      
-        <% @event.ticket_types.each do |type| %>
-        <tr>
-          <td> <%= type.name %> </td>
-          <td> <%= number_to_currency(type.price, unit: 'VND ', precision: 0) %> </td>
-          <td> <%= select_tag('quantity', options_for_select(0..10)) %></td> 
-        </tr>
-        <% end %> 
-      </table>
+    <div class="form-group">
+      <%= f.label :price %>
+      <%= f.text_field :price, class:"form-control" %>
     </div>
-  </div>
-  <div class="row">
-    <div class="col-md-2 col-md-offset-5">
-      <button class="btn btn-success btn-lg btn-block"> Buy </button>
+    <div class="form-group">
+      <%= f.label :max_quantity %>
+      <%= f.text_field :max_quantity, class:"form-control" %>
     </div>
-  <div>
-</div>  
-
+    <div class="form-group row">
+      <%= f.submit "New", class:"btn btn-success" %> |
+      <%= link_to "Back",root_path, class:"btn btn-warning" %>
+    </div>
+    <% end %>
+  </div>    
+</div>
