--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,10 @@
         <%= link_to "Log out", logout_path, method: 'delete', class: "nav-link" %>
       </li>
       <li class="nav-item">
+        <%= link_to "Your Events", new_event_path ,class: 'btn btn-primary' %>
+
+      </li>
+      <li class="nav-item">
         <%= flash_messages %>
 
       </li>
